<resources>
    <string name="app_name">DogeTracker</string>
    <string name="but_login">Skip It</string>
    <string name="but_out">Without Log In</string>
    <string name="tw_sign">Create Account</string>
    <string name="logo_desc">logo Dodge tracker</string>
    <string name="but_back">Back</string>
    <string name="but_sub">Submit</string>
    <string name="ht_pass">Password</string>
    <string name="ht_rpass">Repeat password</string>
    <string name="ht_log">Email</string>
    <string name="bt_anonym">Anonymous Sign in</string>
    <string name="mn_sett">Settings</string>
    <string name="mn_log">Log out</string>
    <string name="bt_cracc">Create Account</string>
    <string name="lorem">Dodge tracker Lorem ipsum dolor sit amet, consectetur
        adipiscing elit. Integer nec odio. Praesent libero.
    </string>

    <string name="google_status_fmt"></string>
    <string name="firebase_status_fmt"></string>

    <!-- Facebook auth secret -->

    <string name="facebook_app_id">496104001198601</string>
    <string name="fb_login_protocol_scheme">fb496104001198601</string>


</resources>
