<?xml version="1.0" encoding="utf-8"?>
<LinearLayout   xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
            android:contentDescription="@string/logo_desc"
            android:id="@+id/imageView"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/logo"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="5dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBackBrown">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp" android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp" android:text="@string/lorem"
                android:textSize="18sp" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>

        <Button
                android:id="@+id/bt_login"
                style="@style/BaseButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="24dp"
                android:background="@color/buttonOrange"
                android:paddingLeft="16dp"
                android:paddingRight="16dp" android:text="@string/but_login"
                android:textAlignment="textStart" android:textColor="@color/colorPureWhite"
                android:textSize="22sp" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"/>






    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>