<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login.Signin"
        android:background="@drawable/logo">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#55FFFFFF"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="16dp">

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="damn you"
                  android:id="@+id/tv_info"
                  android:visibility="invisible"
                  android:textSize="18sp"
                  android:padding="8dp"
                  android:textColor="#f54242"
                    android:layout_marginBottom="32dp"
                    android:background="#22f54242"
                    />

        <EditText android:id="@+id/et_log"
                  android:layout_width="match_parent"
                  android:layout_height="48dp"
                  android:background="#E7E7E7"
                  android:hint="@string/ht_log"
                  android:inputType="textEmailAddress"
                  android:paddingLeft="8dp"/>

        <EditText android:id="@+id/et_pass"
                  android:layout_width="match_parent"
                  android:layout_height="48dp"
                  android:layout_marginTop="16dp"
                  android:background="#E7E7E7"
                  android:hint="@string/ht_pass"
                  android:inputType="textPassword"
                  android:paddingLeft="8dp"/>

        <EditText android:id="@+id/et_rpass"
                  android:layout_width="match_parent"
                  android:layout_height="48dp"
                  android:layout_marginTop="16dp"
                  android:visibility="gone"
                  android:background="#E7E7E7"
                  android:hint="@string/ht_rpass"
                  android:inputType="textPassword" android:paddingLeft="8dp"/>

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal">

            <Button android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="24dp"
                    android:id="@+id/bt_back"
                    android:text="@string/but_back"
                    android:textSize="22sp"
                    android:textColor="@color/colorPureWhite"
                    android:background="#777777"/>

            <Button android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/bt_submit"
                    android:layout_weight="3"
                    android:layout_marginTop="24dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/but_sub"
                    android:textSize="22sp"
                    android:textColor="@color/colorPureWhite"
                    android:background="@color/buttonOrange"/>


        </LinearLayout>

        <Button android:layout_width="match_parent" android:layout_height="wrap_content"
                android:text="Create Account"
                android:id="@+id/bt_createAc"
                android:background="@color/buttonOrange"
                android:textColor="@color/colorPureWhite"
                android:layout_marginTop="24dp"/>




        <com.google.android.gms.common.SignInButton
            android:id="@+id/bt_signin_google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"/>

        <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:paddingLeft="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"/>

        <Button android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/colorPureWhite"
                android:textSize="18sp"
                android:id="@+id/bt_anon"
                android:text="Anonimous"
                android:paddingLeft="18dp"
                android:background="#5dcf00"
                android:drawableStart="@drawable/ic_person_outline_black_24dp"/>



    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>